--- a/pruning_diltilgpt2_o1.ipynb
+++ b/pruning_diltilgpt2_o1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMdfLzFJ+u11Etb2x2yimp0",
+      "authorship_tag": "ABX9TyPTyL2lwAeEQ2IZGctosF/W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3111,8 +3111,69 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "<div>\n",
+        "    <h1>Large Language Models Projects</a></h1>\n",
+        "    <h3>Apply and Implement Strategies for Large Language Models</h3>\n",
+        "    <h2>Pruning distilGPT2.</h2>\n",
+        "    <h3></h3>\n",
+        "</div>\n",
+        "\n",
+        "by [Pere Martra](https://www.linkedin.com/in/pere-martra/)\n",
+        "_______\n",
+        "Models: distilgpt2\n",
+        "\n",
+        "Colab Environment: CPU / GPU T4.\n",
+        "\n",
+        "Keys:\n",
+        "* Pruning\n",
+        "* Structured pruning\n",
+        "\n",
+        "\n",
+        "Related article: --.\n",
+        "_______\n",
+        "This is the unofficial repository for the book:\n",
+        "        <a href=\"https://amzn.to/4eanT1g\"> <b>Large Language Models:</b> Apply and Implement Strategies for Large Language Models</a> (Apress).\n",
+        "        The book is based on the content of this repository, but the notebooks are being updated, and I am incorporating new examples and chapters.\n",
+        "        If you are looking for the official repository for the book, with the original notebooks, you should visit the\n",
+        "        <a href=\"https://github.com/Apress/Large-Language-Models-Projects\">Apress repository</a>, where you can find all the notebooks in their original format as they appear in the book."
+      ],
+      "metadata": {
+        "id": "uMp3lltu2F_N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#PRUNING\n",
+        "Pruning is an important optimization technique in machine learning that aims to reduce the size of a model without sacrificing much of its accuracy. By removing less important components, pruning not only decreases the computational cost but also makes the model more efficient for deployment, especially on resource-constrained devices.\n",
+        "\n",
+        "Can be compared to quantization, another optimization technique that reduces the precision of the model's weights, typically converting them from high-precision floating-point numbers to lower-precision representations. While quantization can significantly reduce model size and speed up inference, it does not selectively remove weights.\n",
+        "\n",
+        "On the other hand, pruning, allows for targeted removal of less important weights or neurons, which can lead to a more efficient reduction in model size while better preserving accuracy. By selecting the weights to eliminate based on their importance scores, pruning provides more control over the model's structure, often making it a more effective approach when aiming for both model compression and high performance.\n",
+        "\n",
+        "Also you can combine both techniques and quantize a model that has been previousluy pruned.\n",
+        "\n",
+        "This notebook focuses on **structured pruning**, where entire neurons are eliminated based on their low importance scores, which are computed using the L1 norm. The assumption is that neurons with lower L1 norm values contribute less to the overall output of the model, allowing for safe removal to enhance efficiency without drastically impacting accuracy."
+      ],
+      "metadata": {
+        "id": "pd_dMCGn3bC4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Install Libraries & Configure variables."
+      ],
+      "metadata": {
+        "id": "pwXWapcuhMVV"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "JfE4lAap1VSi"
       },
@@ -3120,7 +3181,7 @@
       "source": [
         "#Install necessary libraries\n",
         "!pip install -q transformers\n",
-        "!pip install -q torch\n"
+        "!pip install -q torch"
       ]
     },
     {
@@ -3135,8 +3196,7 @@
         "# Check if GPU is available\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(f\"Using device: {device}\")\n",
-        "\n",
-        "prune_percent = 0.2  # For example, prune 20% of neurons"
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -3158,14 +3218,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "prune_percent = 0.2  # For example, prune 20% of neurons\n",
+        "model_name = 'distilgpt2'"
+      ],
       "metadata": {
-        "id": "Duz5JbGYd0Jm",
-        "outputId": "4b1f524d-f110-48f2-869e-ba1cbab96650",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 216
-        }
+        },
+        "id": "Duz5JbGYd0Jm",
+        "outputId": "4b1f524d-f110-48f2-869e-ba1cbab96650"
       },
       "execution_count": 3,
       "outputs": [
@@ -3207,7 +3270,6 @@
       "cell_type": "code",
       "source": [
         "#Download the model and tokenizer\n",
-        "model_name = 'distilgpt2'\n",
         "model = AutoModelForCausalLM.from_pretrained(model_name).to(device)\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
         "tokenizer.pad_token = tokenizer.eos_token\n"
@@ -3242,11 +3304,11 @@
         "print(model)"
       ],
       "metadata": {
-        "id": "B4NhrhqfX749",
-        "outputId": "62fa6765-84f3-4927-9b54-efddddfb75ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B4NhrhqfX749",
+        "outputId": "62fa6765-84f3-4927-9b54-efddddfb75ae"
       },
       "execution_count": 8,
       "outputs": [
@@ -3291,11 +3353,11 @@
         "print(model.config)"
       ],
       "metadata": {
-        "id": "6sVAQPPGX_RQ",
-        "outputId": "da4a6bc0-d659-4ac8-ed34-7919826ef69c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6sVAQPPGX_RQ",
+        "outputId": "da4a6bc0-d659-4ac8-ed34-7919826ef69c"
       },
       "execution_count": 9,
       "outputs": [
@@ -3362,11 +3424,11 @@
         "print(f\"Generated text: {generated}\")"
       ],
       "metadata": {
-        "id": "VthKlKdZSPkd",
-        "outputId": "c4b23f78-1139-46f7-d2b0-261c24968d12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VthKlKdZSPkd",
+        "outputId": "c4b23f78-1139-46f7-d2b0-261c24968d12"
       },
       "execution_count": 18,
       "outputs": [
@@ -3411,6 +3473,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pruning Model."
+      ],
+      "metadata": {
+        "id": "mB2stu4J1azJ"
+      }
     },
     {
       "cell_type": "code",
@@ -3475,6 +3546,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Check pruned model."
+      ],
+      "metadata": {
+        "id": "LqtGqDTy1lbt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Step 7: Recalculate the number of parameters\n",
@@ -3500,6 +3580,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "E_oRTPuD1p-D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.config)"
+      ],
+      "metadata": {
+        "id": "89AbYZ5F1vxA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
