--- a/pruning_diltilgpt2_o1.ipynb
+++ b/pruning_diltilgpt2_o1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPTyL2lwAeEQ2IZGctosF/W",
+      "authorship_tag": "ABX9TyMQNXXE5iwBVVqckXJV0RkI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +14,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "6d32b2537ad1443ea461be4fb48a549d": {
@@ -3154,9 +3152,11 @@
         "\n",
         "On the other hand, pruning, allows for targeted removal of less important weights or neurons, which can lead to a more efficient reduction in model size while better preserving accuracy. By selecting the weights to eliminate based on their importance scores, pruning provides more control over the model's structure, often making it a more effective approach when aiming for both model compression and high performance.\n",
         "\n",
+        "The effectiveness of removing specific parts of a model could be debated, but recent studies, such as the one conducted by NVIDIA: [How to Prune and Distill Llama-3.1 8B to an NVIDIA Llama-3.1-Minitron 4B Model](https://developer.nvidia.com/blog/how-to-prune-and-distill-llama-3-1-8b-to-an-nvidia-llama-3-1-minitron-4b-model/), concluding that pruning, combined with fine-tuning techniques applied after pruning, can produce models that are not only more efficient but also more effective in specific domains.\n",
+        "\n",
         "Also you can combine both techniques and quantize a model that has been previousluy pruned.\n",
         "\n",
-        "This notebook focuses on **structured pruning**, where entire neurons are eliminated based on their low importance scores, which are computed using the L1 norm. The assumption is that neurons with lower L1 norm values contribute less to the overall output of the model, allowing for safe removal to enhance efficiency without drastically impacting accuracy."
+        "This notebook focuses on **structured width pruning**, where entire neurons are eliminated based on their low importance scores, which are computed using the L1 norm. The assumption is that neurons with lower L1 norm values contribute less to the overall output of the model, allowing for safe removal to enhance efficiency without drastically impacting accuracy."
       ],
       "metadata": {
         "id": "pd_dMCGn3bC4"
@@ -3173,7 +3173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "JfE4lAap1VSi"
       },
@@ -3205,7 +3205,7 @@
         "id": "f6svKMvV1fG8",
         "outputId": "095a03c2-996d-44b4-fadb-db086977de92"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3230,7 +3230,7 @@
         "id": "Duz5JbGYd0Jm",
         "outputId": "4b1f524d-f110-48f2-869e-ba1cbab96650"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3254,7 +3254,7 @@
       "metadata": {
         "id": "v0fIEu2jeH10"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3277,7 +3277,7 @@
       "metadata": {
         "id": "oyWPcQoy1nKi"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3295,7 +3295,7 @@
       "metadata": {
         "id": "fq-WAX4MfHbd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3310,7 +3310,7 @@
         "id": "B4NhrhqfX749",
         "outputId": "62fa6765-84f3-4927-9b54-efddddfb75ae"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3359,7 +3359,7 @@
         "id": "6sVAQPPGX_RQ",
         "outputId": "da4a6bc0-d659-4ac8-ed34-7919826ef69c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3430,7 +3430,7 @@
         "id": "VthKlKdZSPkd",
         "outputId": "c4b23f78-1139-46f7-d2b0-261c24968d12"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3463,7 +3463,7 @@
         "id": "pGjseuY42h9O",
         "outputId": "020d502a-7564-4175-a36e-7a7c5f26a3a8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3542,7 +3542,7 @@
       "metadata": {
         "id": "4jnGGcCz2mAW"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3569,7 +3569,7 @@
         "id": "51hobl7W4iou",
         "outputId": "68686f32-a9ad-48f8-f240-b52b6c93fb70"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3616,7 +3616,7 @@
         "id": "S2gAXLSR_arg",
         "outputId": "ffff3e63-9967-4f47-fc27-1c6e8d2cb081"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3653,7 +3653,7 @@
         "id": "eYG4Zd55_hXg",
         "outputId": "83c9ef16-5b7e-4942-aa85-2788ab0e21fc"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3697,7 +3697,7 @@
         "id": "zGGk--ndA1LA",
         "outputId": "cfd317db-2962-4b67-87c1-6ed3ce096ecd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3751,7 +3751,7 @@
         "id": "n-LSLfjFBDHt",
         "outputId": "5d697b71-2c7a-4abb-b947-ed8cdaad8b51"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3882,7 +3882,7 @@
         "id": "BBWXDT0FMF2e",
         "outputId": "10a0e73b-3c2b-4c59-90d0-f4f6ed2846a2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4011,7 +4011,7 @@
         "id": "lwmyUxXVNLBc",
         "outputId": "a3541ab5-f76f-41aa-bb79-51e1050d8344"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
