--- a/pruning_diltilgpt2_o1.ipynb
+++ b/pruning_diltilgpt2_o1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU5sKOPB575qzG4f+ihwRo",
+      "authorship_tag": "ABX9TyO25IfibnRa3wDobqI9A0X6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7029,12 +7029,29 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Author's Note\n",
+        "\n",
+        "In addition to creating content like this notebook and offering it under the MIT license, I have also contributed to repositories such as those of Hugging Face and Google Gemini.\n",
+        "\n",
+        "I am especially proud of my book: <a href=\"https://amzn.to/4eanT1g\"><b>Large Language Models:</b> Apply and Implement Strategies for Large Language Models</a> (Apress).\n",
+        "\n",
+        "You can find it on both <a href=\"https://amzn.to/4eanT1g\">Amazon</a> and <a href=\"https://link.springer.com/book/10.1007/979-8-8688-0515-8\">Springer</a>, where they often have good deals on the purchase price.\n",
+        "\n",
+        "If you take a look and end up purchasing it, keep in mind that you can reach out with any questions via the Discussions section of this same repository or on any of my social media channels. I’ll do my best to respond as quickly as possible.\n"
+      ],
+      "metadata": {
+        "id": "F8bNxCJBqfNm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ljeSGozSdoPx"
+        "id": "EEBycG7Zw_3K"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     }
   ]
