--- a/pruning_diltilgpt2_o1.ipynb
+++ b/pruning_diltilgpt2_o1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO25IfibnRa3wDobqI9A0X6",
+      "authorship_tag": "ABX9TyOmQNs0+BqJmP6/9cxDWfKd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5510,7 +5510,7 @@
         "    <h1>Large Language Models Projects</a></h1>\n",
         "    <h3>Apply and Implement Strategies for Large Language Models</h3>\n",
         "    <h2>Pruning distilGPT2.</h2>\n",
-        "    <h3>Structured Width Prunig. Eliminating less importat Neurons from feed forward layers.</h3>\n",
+        "    <h3>Structured Width Pruning: Eliminating Less Important Neurons from Feedforward Layers.</h3>\n",
         "</div>\n",
         "\n",
         "by [Pere Martra](https://www.linkedin.com/in/pere-martra/)\n",
@@ -5568,7 +5568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "JfE4lAap1VSi"
       },
@@ -5600,7 +5600,7 @@
         "id": "f6svKMvV1fG8",
         "outputId": "e964736d-4c76-405b-e6ae-b50604e82089"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5631,7 +5631,7 @@
       "metadata": {
         "id": "Duz5JbGYd0Jm"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5644,7 +5644,7 @@
       "metadata": {
         "id": "v0fIEu2jeH10"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5751,7 +5751,7 @@
           ]
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5876,7 +5876,7 @@
       "metadata": {
         "id": "fq-WAX4MfHbd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5907,7 +5907,7 @@
         "id": "B4NhrhqfX749",
         "outputId": "8324e848-a999-4567-fb28-6453e052b32b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5985,7 +5985,7 @@
         "id": "6sVAQPPGX_RQ",
         "outputId": "456e9d28-3fc8-4c90-cb7f-5002bde59ae0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6056,7 +6056,7 @@
         "id": "VthKlKdZSPkd",
         "outputId": "4b5e421f-93df-4ce3-e142-ef78090307c4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6089,7 +6089,7 @@
         "id": "pGjseuY42h9O",
         "outputId": "0098af1b-7a3e-45f5-a67b-5b4411324cdc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6127,7 +6127,7 @@
       "metadata": {
         "id": "5oZ2K2z6h9Fi"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6148,7 +6148,7 @@
       "metadata": {
         "id": "0_LCgVAWiTHa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6179,7 +6179,7 @@
       "metadata": {
         "id": "Ert9JitClPAu"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6225,7 +6225,7 @@
       "metadata": {
         "id": "_-tFAMWslQ8m"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6252,7 +6252,7 @@
       "metadata": {
         "id": "EIG9ld8JlVYk"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6347,7 +6347,7 @@
       "metadata": {
         "id": "-v5na0YnlF0d"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6368,7 +6368,7 @@
       "metadata": {
         "id": "y6PSMIe0lYt8"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6386,7 +6386,7 @@
         "id": "51hobl7W4iou",
         "outputId": "dc9b5576-13b3-4a3d-9373-10ba2cf4a002"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6420,7 +6420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6481,7 +6481,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6563,7 +6563,7 @@
         "id": "S2gAXLSR_arg",
         "outputId": "c3163e1c-78fb-457c-f643-8ac929eebc8e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6622,7 +6622,7 @@
         "id": "eYG4Zd55_hXg",
         "outputId": "9c89d599-64cd-43bb-d10a-ce07e78a492a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6666,7 +6666,7 @@
         "id": "zGGk--ndA1LA",
         "outputId": "86e3679b-9e48-4684-b195-db35bbe2978f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6720,7 +6720,7 @@
         "id": "n-LSLfjFBDHt",
         "outputId": "f66ab871-e073-480a-dde2-dc0d44320745"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6843,7 +6843,7 @@
         "id": "BBWXDT0FMF2e",
         "outputId": "bd464d90-2ba8-41bc-c64e-d3a436497bad"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6972,7 +6972,7 @@
         "id": "lwmyUxXVNLBc",
         "outputId": "46cc5230-b202-4f04-8427-60d6ffaa334a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
