--- a/pruning_structured_llama3.2-1b.ipynb
+++ b/pruning_structured_llama3.2-1b.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMF4TnUsyqR7CZDRBFX81qe",
+      "authorship_tag": "ABX9TyPIUKTCA3AF8TB5N6NkUPua",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4821,59 +4821,83 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!pip install transformers\n",
-        "!pip install torch\n",
-        "!pip install sentencepiece  # Required for LLaMA tokenizer"
+        "\n",
+        "<div>\n",
+        "    <h1>Large Language Models Projects</a></h1>\n",
+        "    <h3>Apply and Implement Strategies for Large Language Models</h3>\n",
+        "    <h2>Pruning Llama 3.2.</h2>\n",
+        "    <h3>Example of incorrect approach to pruning.</h3>\n",
+        "</div>\n",
+        "\n",
+        "by [Pere Martra](https://www.linkedin.com/in/pere-martra/)\n",
+        "_______\n",
+        "Models: distilgpt2\n",
+        "\n",
+        "Colab Environment: GPU T4.\n",
+        "\n",
+        "Keys:\n",
+        "* Pruning\n",
+        "* Structured pruning\n",
+        "\n",
+        "\n",
+        "Related article: --.\n",
+        "_______\n",
+        "This is the unofficial repository for the book:\n",
+        "        <a href=\"https://amzn.to/4eanT1g\"> <b>Large Language Models:</b> Apply and Implement Strategies for Large Language Models</a> (Apress).\n",
+        "        The book is based on the content of this repository, but the notebooks are being updated, and I am incorporating new examples and chapters.\n",
+        "        If you are looking for the official repository for the book, with the original notebooks, you should visit the\n",
+        "        <a href=\"https://github.com/Apress/Large-Language-Models-Projects\">Apress repository</a>, where you can find all the notebooks in their original format as they appear in the book.\n",
+        "        ______"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5zHApVm41HWq",
-        "outputId": "ffa0def1-31c0-458e-d854-88e56647c0bf"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.44.2)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.16.1)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.24.7)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.26.4)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (24.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.2)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2024.9.11)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.32.3)\n",
-            "Requirement already satisfied: safetensors>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.5)\n",
-            "Requirement already satisfied: tokenizers<0.20,>=0.19 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.19.1)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.5)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.6.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2024.8.30)\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (2.4.1+cu121)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch) (3.16.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.8.0 in /usr/local/lib/python3.10/dist-packages (from torch) (4.12.2)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch) (1.13.3)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch) (3.4)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch) (3.1.4)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch) (2024.6.1)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch) (3.0.1)\n",
-            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->torch) (1.3.0)\n",
-            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.10/dist-packages (0.2.0)\n"
-          ]
-        }
-      ]
+        "id": "hP9S5ckLF9lo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Introduction\n",
+        "This notebook cotinues the work done at: [6_1_pruning_structured_l1_diltilgpt2.ipynb](6_1_pruning_structured_l1_diltilgpt2.ipynb) where pruning was applied to a distilGPT2 model.\n",
+        "\n",
+        "The pruning process was based on selecting neurons from the model's feedforward layers that have the least importance using the L1 norm, assuming these contributed the least to the model's output.\n",
+        "\n",
+        "In this notebook, the same process is applied to a state-of-the-art model from the Llama family. The results, however, are not as expected, simply because the model's structure is very different, and the method needs to be adapted to these characteristics.\n",
+        "\n",
+        "**In this notebook, we'll identify the main issues so we can address them in a follow-up notebook.**"
+      ],
+      "metadata": {
+        "id": "v4DPE3cPHIZC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Install libraries & Configure variables."
+      ],
+      "metadata": {
+        "id": "7d6zxPkdR88i"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "#Install necessary libraries.\n",
+        "!pip install -q transformers\n",
+        "!pip install -q torch\n",
+        "!pip install -q sentencepiece  # Required for LLaMA tokenizer"
+      ],
+      "metadata": {
+        "id": "5zHApVm41HWq"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Import libraries\n",
         "import torch\n",
         "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
         "from torch import nn\n",
@@ -4888,9 +4912,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GJNgRj4M187E",
-        "outputId": "f4331743-0629-4143-a0df-4bbc3ffc0fa0"
+        "outputId": "2f91c55c-c0cc-4347-cf48-b8d7515c998f"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -4900,6 +4924,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Download and explore structure"
+      ],
+      "metadata": {
+        "id": "n0MedSz-SIYH"
+      }
     },
     {
       "cell_type": "code",
@@ -4985,7 +5018,7 @@
         "id": "q-z_1Zpg2I6u",
         "outputId": "029c78be-7fa8-42a0-f761-e3ce82f3f629"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5087,11 +5120,7 @@
         "    )\n",
         "    generated = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
         "    return generated\n",
-        "\n",
-        "# Test the original model\n",
-        "prompt = \"Paris is the capital of\"\n",
-        "generated = get_output(prompt)\n",
-        "print(f\"Generated text: {generated}\")"
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -5100,7 +5129,7 @@
         "id": "9UpMD4Hw2MWg",
         "outputId": "22dcff03-8011-4c37-8714-4bc8a9381e27"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5114,11 +5143,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Test the original model\n",
+        "prompt = \"Paris is the capital of\"\n",
+        "generated = get_output(prompt)\n",
+        "print(f\"Generated text: {generated}\")"
+      ],
+      "metadata": {
+        "id": "QCxjsR4nSP31"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Support function to check the size reduction.\n",
         "def count_parameters(model):\n",
-        "    return sum(p.numel() for p in model.parameters())\n",
-        "\n",
-        "original_param_count = count_parameters(model)\n",
-        "print(f\"Original model parameters: {original_param_count}\")"
+        "    return sum(p.numel() for p in model.parameters())"
       ],
       "metadata": {
         "colab": {
@@ -5127,7 +5168,7 @@
         "id": "8WR96iwq2XYH",
         "outputId": "f88c21e9-71cc-4a2f-824f-351fee8b0c42"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5150,7 +5191,7 @@
       "metadata": {
         "id": "_mMGhTtD4PRX"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5209,7 +5250,7 @@
       "metadata": {
         "id": "NX9Boph94RWA"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5254,7 +5295,19 @@
       "metadata": {
         "id": "FxJEWg1X3j0m"
       },
-      "execution_count": 13,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "original_param_count = count_parameters(model)\n",
+        "print(f\"Original model parameters: {original_param_count}\")"
+      ],
+      "metadata": {
+        "id": "YiZf0g9pQvbD"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5270,7 +5323,7 @@
         "id": "NIUnFU5R3n42",
         "outputId": "6e9cc951-bb48-4e08-fddf-4ce77363afdf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5379,7 +5432,7 @@
         "id": "tdJUkfWI3qMM",
         "outputId": "15e7fec6-97c4-467b-ccf5-41180f3b08d9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5406,7 +5459,7 @@
         "id": "wvj-iIsO5M6U",
         "outputId": "7089b20e-6e56-4e5d-aa77-ea23726993dd"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5442,7 +5495,7 @@
         "id": "S2Ll_kqe5QzO",
         "outputId": "49629950-c67e-4b97-916d-0526e2a01567"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5480,7 +5533,7 @@
         "id": "3LjjsGZV5ZHJ",
         "outputId": "bfabc1e6-262d-4952-ac1f-61878e4b7325"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5537,7 +5590,7 @@
         "id": "6xNN-aYa5h9B",
         "outputId": "c8a3884a-a7ac-4218-9ab2-fd65e45acdf7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5652,7 +5705,7 @@
         "id": "81iZY5ru6B7h",
         "outputId": "2f62c44a-9783-414f-c3db-dad3c6020b90"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5754,7 +5807,7 @@
         "id": "MqCTEMGq6E6i",
         "outputId": "ff5f45c6-17cd-4c4e-cc20-d02f685c88b5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
